# carsten

./: .gitignore  Dockerfile  LICENSE  README.md  data.py  lll.py  lll_maple.py  main.tf  notebook.py  packer.pkr.hcl  playbook.yml  requirements.txt  run.py
lll/: Cargo.toml  pyproject.toml
lll/src/: algorithm.rs  data.rs  lib.rs
server/: init.service  init.sh
