[package]
name = "lll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lll_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
num-bigint = "0.4"
fraction = { version = "0.13.0", features = ["with-bigint"] }